tdf#169160 - Fix after presentation minimizer works

the file size is barely changed (from 1.6 Mb to ~1.2),
comparing to older version with where we used awt::XBitmap
and the file size changed from 1.6 Mb to ~0.3.

Issue came up after commit:
7243f7c706ceb49d6b3e4dfb8ff72ab43c65dd86

co-author: Gabor Kelemen <gabor.kelemen@collabora.com>

Change-Id: Id728abe61556c40d7dfb0f0f9e4fb7278639a691
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193322
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 6998ed74d5e897312211bc8e3da243e00d0ede22)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193364
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>