sdext/source/minimizer/impoptimizer.cxx
@@ -41,7 +41,7 @@
 #include <com/sun/star/drawing/XDrawPagesSupplier.hpp>
 #include <com/sun/star/drawing/XMasterPagesSupplier.hpp>
 #include <com/sun/star/presentation/XPresentationPage.hpp>
-#include <com/sun/star/rendering/XBitmap.hpp>
+#include <com/sun/star/awt/XBitmap.hpp>
 #include <com/sun/star/document/XFilter.hpp>
 #include <com/sun/star/lang/XMultiServiceFactory.hpp>
 #include <com/sun/star/graphic/GraphicType.hpp>
@@ -371,7 +371,7 @@ static void CompressGraphics( ImpOptimizer& rOptimizer, const Reference< XCompon
                 Reference< XGraphic > xGraphic;
                 if ( rGraphic.maUser[ 0 ].mbFillBitmap && rGraphic.maUser[ 0 ].mxPropertySet.is() )
                 {
-                    Reference< rendering::XBitmap > xFillBitmap;
+                    Reference< awt::XBitmap > xFillBitmap;
                     if ( rGraphic.maUser[ 0 ].mxPropertySet->getPropertyValue( u"FillBitmap"_ustr ) >>= xFillBitmap )
                         xGraphic.set( xFillBitmap, UNO_QUERY_THROW );
                 }
@@ -412,7 +412,7 @@ static void CompressGraphics( ImpOptimizer& rOptimizer, const Reference< XCompon
                             }
                             else if ( rGraphicUser.mxPropertySet.is() )
                             {
-                                Reference< rendering::XBitmap > xFillBitmap( xNewGraphic, UNO_QUERY );
+                                Reference< awt::XBitmap > xFillBitmap( xNewGraphic, UNO_QUERY );
                                 if ( xFillBitmap.is() )
                                 {
                                     awt::Size aSize;
